@@ -1,0 +1,8 @@
+Title: CSV export for availability works now also for BI aggregates
+Level: 1
+Component: reporting
+Version: 1.2.5i3
+Date: 1399302263
+Class: feature
+
+
